fixed some responsive layout issues

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -4,13 +4,6 @@ body{
     font-family:'Roboto',Arial;
 }
 
-button
-{
-    font-size: 16px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: white;
-}
 hr{
     border: none;
     height: 0.5px;
