--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,3 +1,64 @@
+/**header styling for mobile screen*/
+.sidebar-mobile {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #ffff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    display: none;
+  }
+  
+  .secondGroup button:hover {
+    color: #f1f1f1;
+  }
+  /* close button on header */
+
+
+.box-mobile
+{
+display: flex;
+flex-direction: row;
+column-gap: 20px;
+padding:10px 20px ;
+}
+.box-mobile p
+{
+  margin: 5px 0;
+  text-align: center;
+  font-size: 16px;
+}
+.box-mobile img
+{
+  height:25px;
+}
+.header-formobile
+{
+ display: flex;
+ justify-content: start;
+ padding:5px 10px;
+}
+
+.closebtn {
+
+ border: none;
+ padding: 13px 5px  0 0;
+ background-color:white;
+  }
+  .closebtn img {
+
+  height: 25px;
+    
+  }
+
+/**header styling for large screen*/
+
+
+
 .header{
     display: grid;
     position: fixed;
@@ -6,13 +67,10 @@
     right: 0;
     height: 50px;
     z-index: 2;
-    grid-template-columns: 10vw 80vw 10vw;
+    grid-template-columns: 25vw 40vw 35vw;
     background-color: white;
 }
-#collapseButton
-{
-   visibility: hidden;
-}
+
 #collapseButton:hover{
     background-color: rgb(241, 241, 241);
     border-radius: 50%;
@@ -26,6 +84,7 @@ input
 }
 .logo
 {
+
    margin-right: 6px;
    display: flex;
    align-items: center;
@@ -34,7 +93,6 @@ input
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 50px;
     margin-left: 150px;
     margin-right: 30px;
 }
@@ -58,10 +116,6 @@ input
 {
     outline: none; 
     border-color: rgb(12, 68, 187); 
-}
-.searchbar:focus .searchbar-section
-{
-   width: 700px;
 }
 
 .youtube-logo{
@@ -106,13 +160,13 @@ input
     justify-content: center;
     background-color: rgb(227, 227, 227);
     cursor: pointer;
+    visibility: hidden;
 }
 .topright
 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 5px;
     position: relative;
     
 }
@@ -133,6 +187,7 @@ input
     margin-top: 1px;
     cursor: pointer;
     visibility:hidden;
+    background-color: transparent;
 }
 .notification-box
 {
@@ -148,9 +203,9 @@ input
     border-radius: 10px;
     justify-content: center;
     position: absolute;
-    top: 2px;
+    top: -16px;
     display: flex;
-    right: 4.5vw;
+    right: 5.5vw;
 }
 .notification-icon
 {
@@ -165,16 +220,18 @@ input
     margin-top: 1px;
     cursor: pointer;
     visibility: hidden;
+    background-color: transparent;
 }
 
 .user-button
 {
     border: none;
     cursor: pointer;
+    background-color: transparent;
   
 }
 .user-button img{
- height: 20px;
+ height: 30px;
 
 }
 
