--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,187 +1,214 @@
 /* Small devices (landscape phones, 576px and up) */
 
-@media (max-width: 576px) { 
-  .sidebar
-  {
+@media (max-width: 576px) {
+  .sidebar {
     visibility: hidden;
   }
- }
+
+  #collapseButton {
+    display: none;
+  }
+
+}
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-  .video-grid
-  {
+  body {
+    padding-left: 80px;
+  }
+  .header {
+    height: 60px;
+    grid-template-columns: 20vw 60vw 20vw;
+  }
+
+  .video-grid {
     display: grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     column-gap: 30px;
     row-gap: 10px;
     padding-right: 25px;
   }
-  .sidebar-mobile
-  {
+
+  .sidebar-mobile {
     visibility: hidden;
   }
- 
- 
+
+  .menu-icon {
+    height: 24px;
   }
 
-  
-  /* Medium devices (landscape tablets, 768px and up) */
-  @media  (min-width:768px) {
-
-    /*Header section */
-    .header{
-      height: 60px;
-      grid-template-columns: 15vw 70vw 15vw ;
-  }
-  #collapseButton
-{
-  visibility: visible;
-}
-.closebtn
-{
-  visibility: hidden;
-}
-#collapseButton
-{
+  #collapseButton {
     border: none;
     height: 40px;
     width: 40px;
     cursor: pointer;
     margin-left: 20px;
     margin-right: 10px;
-    visibility: visible;
+    background: transparent;
+  }
+  .sidebar {
+    width: 180px;
+  }
+
+  .collapse {
+    width: 60px;
+  }
+
+
 }
-  .menu-icon{
-    height: 20px;
-    visibility:visible;
-}
-  .searchbar-section{
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width:768px) {
+  body {
+    padding-left: 100px;
+  }
+  /*Header section */
+  .header {
+    height: 60px;
+    grid-template-columns: 15vw 70vw 15vw;
+  }
+
+  .closebtn {
+    visibility: hidden;
+  }
+  .searchbar-section {
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 80%; /* Set width to 80% of the parent container */
+    width: 80%;
+    /* Set width to 80% of the parent container */
     max-width: 660px;
     margin-left: 10vw;
     margin-right: 30px;
-}
-.user-button img{
-  height: 33px;
- 
- }
- .topright
-{
+  }
+
+  .voice-search {
+    visibility: visible;
+  }
+
+  .user-button img {
+    height: 33px;
+
+  }
+
+  .topright {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-right: 12px;
-    
-}
-.uplod-button
-{
-  visibility: visible;
-}
-.notification-button
-{
-  visibility: visible;
-}
-.notification-box
-{
-  visibility: visible;
-}
 
-/*main content style*/
-    .video-grid
-    {
-      display: grid;
-      grid-template-columns:1fr 1fr;
-      column-gap: 30px;
-      row-gap: 10px;
-      padding-right: 25px;
-    }
-    .sidebar
-    {
-      width: 200px;
-    }
-    .collapse
-{
+  }
+
+  .uplod-button {
+    visibility: visible;
+  }
+
+  .notification-button {
+    visibility: visible;
+  }
+
+  .notification-box {
+    visibility: visible;
+  }
+
+  /*main content style*/
+  .video-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+    row-gap: 10px;
+    padding-right: 25px;
+  }
+
+  .sidebar {
+    width: 200px;
+  }
+
+  .collapse {
     width: 80px;
+  }
+
+  /*sidebar style for medium devices*/
+
 }
-  }
-  
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
-    .video-grid
-    {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-    body{
-     padding-left: 250px;
-    }
-   
-  
-  }
-  
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) {
 
-    /*header section*/
-
-    .header{
-      height: 60px;
-      grid-template-columns: 25vw 60vw 15vw ;
-    }
-    .topright
-    {
-      margin-right: 32px;
-    }
-  
-    /*main style section*/
-    .video-grid
-    {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-    .video-info-grid{
-      height: 90px;
-      display: grid;
-      grid-template-columns:80px 1fr ;
-    }
-    
-    .channel-picture{
-      display: flex;
-      height: 50px;
-      width: 50px;
-      border-radius: 25px;
-      overflow: hidden;
-    }
-    .thumbnail-row
-    {
-     position: relative;
-      margin-bottom: 10px;
-    }
-    .thumbnail
-    {
-      border-radius: 18px;
-      width: 100%;
-    }
-    .video-title{
-      font-weight: 600;
-    }
-
-    
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
   }
+  .sidebar-shrink {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  body {
+    padding-left: 250px;
+  }
+
+  /* toggle grid to 3 and 4 only larger screen*/
+ 
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+  /*header section*/
+
+  .header {
+    height: 60px;
+    grid-template-columns: 25vw 60vw 15vw;
+  }
+
+  .topright {
+    margin-right: 32px;
+  }
+
+  /*main style section*/
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .video-info-grid {
+    height: 90px;
+    display: grid;
+    grid-template-columns: 80px 1fr;
+  }
+
+  .channel-picture {
+    display: flex;
+    height: 50px;
+    width: 50px;
+    border-radius: 25px;
+    overflow: hidden;
+  }
+
+  .thumbnail-row {
+    position: relative;
+    margin-bottom: 10px;
+  }
+
+  .thumbnail {
+    border-radius: 18px;
+    width: 100%;
+  }
+
+  .video-title {
+    font-weight: 600;
+  }
+
+
+}
 
 /* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) { 
+@media (min-width: 1400px) {
 
-  .video-grid
-    {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
-    .sidebar
-    {
-        visibility: visible;
-    }
+  .sidebar {
+    visibility: visible;
+  }
 
- }
+}
