--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
   grid-template-columns:1fr;
   column-gap: 30px;
   row-gap: 30px;
-  padding-right: 25px;
+  padding: 0 10px;
 }
 
 .video-info-grid{
@@ -39,27 +39,7 @@
 {
  color:rgb(54, 54, 54);
 }
-.top
-{
-  height: 50px;
 
-}
-.top button
-{
-  background-color: rgb(239 238 238);
-  color: rgb(76 73 73);
-  border: none;
-  padding: 8px;
-  font-size: 14px;
-  margin-right: 12px;
-  cursor: pointer;
-  border-radius: 8px;
-}
-.top .all-button
-{
-  color: rgb(255, 255, 255);
-  background-color: rgb(3, 3, 3);
-}
 
 .video-time
 {
@@ -82,3 +62,48 @@
 }
 
 
+/*top button list*/
+.label-container
+{
+  display: flex;
+
+  padding-bottom: 10px;
+}
+
+.top
+{
+  display:flex;
+  column-gap: 10px;
+  overflow: hidden;
+  width: 90%;
+  margin: 0 10px;
+}
+.btn-list
+{
+    background-color: rgb(239 238 238);
+  color: rgb(76 73 73);
+  border: none;
+  font-size: 14px;
+  text-align: center;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 8px;
+  white-space: nowrap;
+}
+.top .all-button
+{
+  color: rgb(255, 255, 255);
+  background-color: rgb(3, 3, 3);
+}
+.scroll-button
+{
+  background-color: rgb(245, 241, 241);
+  color: rgb(76 73 73);
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.scroll-button img
+{
+  height: 20px;
+}
